--- a/render.yaml
+++ b/render.yaml
@@ -10,11 +10,13 @@ services:
       - key: NODE_ENV
         value: production
 
-  - type: static_site
+  - type: web
     name: train-search-frontend
+    env: static
     rootDir: frontend
     buildCommand: npm install && npm run build
-    publishDir: build
+    staticPublishPath: build
+    plan: free
     envVars:
       - key: REACT_APP_API_URL
         value: https://train-search-backend.onrender.com
